--- a/.github/workflows/build-visual_studio.yml
+++ b/.github/workflows/build-visual_studio.yml
@@ -3,6 +3,9 @@ name: Build Chiaki with Visual Studio
 on:
   workflow_call:
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build-win_x64: # only win_x64 so far :)
     name: Build Chiaki win_x64 (VC)
@@ -24,17 +27,17 @@ jobs:
       - name: Setup NASM
         run: |
           $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest -UseBasicParsing -Uri "https://www.nasm.us/pub/nasm/releasebuilds/2.15.05/win64/nasm-2.15.05-win64.zip" -OutFile ".\nasm-2.15.05-win64.zip"
-          Expand-Archive -LiteralPath "nasm-2.15.05-win64.zip" -DestinationPath "."
-          Rename-Item "nasm-2.15.05" "nasm"
+          Invoke-WebRequest -UseBasicParsing -Uri "https://www.nasm.us/pub/nasm/releasebuilds/2.16/win64/nasm-2.16-win64.zip" -OutFile ".\nasm-2.16-win64.zip"
+          Expand-Archive -LiteralPath "nasm-2.16-win64.zip" -DestinationPath "."
+          Rename-Item "nasm-2.16" "nasm"
           Write-Output "${{ github.workspace }}\nasm" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Setup ffmpeg
         run: |
           $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest -UseBasicParsing -Uri "https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-n5.0-latest-win64-gpl-shared-5.0.zip" -OutFile ".\ffmpeg-n5.0-latest-win64-gpl-shared-5.0.zip"
-          Expand-Archive -LiteralPath "ffmpeg-n5.0-latest-win64-gpl-shared-5.0.zip" -DestinationPath "."
-          Rename-Item "ffmpeg-n5.0-latest-win64-gpl-shared-5.0" "ffmpeg"
+          Invoke-WebRequest -UseBasicParsing -Uri "https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl-shared.zip" -OutFile ".\ffmpeg-master-latest-win64-gpl-shared.zip"
+          Expand-Archive -LiteralPath "ffmpeg-master-latest-win64-gpl-shared.zip" -DestinationPath "."
+          Rename-Item "ffmpeg-master-latest-win64-gpl-shared" "ffmpeg"
           Write-Output "${{ github.workspace }}\ffmpeg" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Setup Protoc
@@ -58,9 +61,9 @@ jobs:
       - name: Setup SDL2
         run: |
           $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest -UseBasicParsing -Uri "https://www.libsdl.org/release/SDL2-devel-2.0.22-VC.zip" -OutFile ".\SDL2-devel-2.0.22-VC.zip"
-          Expand-Archive -LiteralPath "SDL2-devel-2.0.22-VC.zip" -DestinationPath "."
-          Rename-Item "SDL2-2.0.22" "SDL2"
+          Invoke-WebRequest -UseBasicParsing -Uri "https://www.libsdl.org/release/SDL2-devel-2.28.3-VC.zip" -OutFile ".\SDL2-devel-2.28.3-VC.zip"
+          Expand-Archive -LiteralPath "SDL2-devel-2.28.3-VC.zip" -DestinationPath "."
+          Rename-Item "SDL2-2.28.3" "SDL2"
           $nix_path = "${{ github.workspace }}" -replace "\\", "/"
           Write-Output "SDL2_DIR=${{ github.workspace }}\SDL2" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           Set-Content -Path "${{ github.workspace }}\SDL2\sdl2-config.cmake" -Value 'set(TARGET_NAME SDL2::SDL2)'
