--- a/.github/workflows/build-visual_studio.yml
+++ b/.github/workflows/build-visual_studio.yml
@@ -53,9 +53,10 @@ jobs:
       - name: Setup OpenSSL
         run: |
           $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest -UseBasicParsing -Uri "https://mirror.firedaemon.com/OpenSSL/openssl-1.1.1p.zip" -OutFile ".\openssl-1.1.1p.zip"
-          Expand-Archive -LiteralPath "openssl-1.1.1p.zip" -DestinationPath "."
-          Rename-Item "openssl-1.1" "openssl"
+          Invoke-WebRequest -UseBasicParsing -Uri "https://www.openssl.org/source/old/1.1.1/openssl-1.1.1p.tar.gz" -OutFile ".\openssl-1.1.1p.tar.gz"
+          Expand-Archive -LiteralPath "openssl-1.1.1p.tar.gz" -DestinationPath "."
+          Expand-Archive -LiteralPath "openssl-1.1.1p.tar" -DestinationPath "."
+          Rename-Item "openssl-1.1.1p" "openssl"
           Write-Output "${{ github.workspace }}\openssl" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Setup SDL2
