--- a/.github/workflows/build-visual_studio.yml
+++ b/.github/workflows/build-visual_studio.yml
@@ -53,9 +53,9 @@ jobs:
       - name: Setup OpenSSL
         run: |
           $ProgressPreference = 'SilentlyContinue'
-          Invoke-WebRequest -UseBasicParsing -Uri "https://www.openssl.org/source/old/1.1.1/openssl-1.1.1p.tar.gz" -OutFile ".\openssl-1.1.1p.tar.gz"
-          tar -xvzf .\openssl-1.1.1p.tar.gz
-          Rename-Item "openssl-1.1.1p" "openssl"
+          Invoke-WebRequest -UseBasicParsing -Uri "https://download.firedaemon.com/FireDaemon-OpenSSL/openssl-1.1.1w.zip" -OutFile ".\openssl-1.1.1w.zip"
+          Expand-Archive -LiteralPath "openssl-1.1.1w.zip" -DestinationPath "."
+          Rename-Item "openssl-1.1.1w" "openssl"
           Write-Output "${{ github.workspace }}\openssl" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Setup SDL2
